# trabalho-data-engineering-pyspark

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.yaml
data/output/pedidos_pagamentos/: .part-00000-3583485e-a2d1-4709-9c85-8d09256e0ff0-c000.snappy.parquet.crc  .part-00000-de6e6ad1-12c1-4abe-b7f8-3214f346774e-c000.snappy.parquet.crc  .part-00001-3583485e-a2d1-4709-9c85-8d09256e0ff0-c000.snappy.parquet.crc  .part-00001-de6e6ad1-12c1-4abe-b7f8-3214f346774e-c000.snappy.parquet.crc  part-00000-3583485e-a2d1-4709-9c85-8d09256e0ff0-c000.snappy.parquet  part-00000-de6e6ad1-12c1-4abe-b7f8-3214f346774e-c000.snappy.parquet  part-00001-3583485e-a2d1-4709-9c85-8d09256e0ff0-c000.snappy.parquet  part-00001-de6e6ad1-12c1-4abe-b7f8-3214f346774e-c000.snappy.parquet
data/output/relatorios/: .part-00000-93de9fde-314e-461c-8b8d-3f427212a03a-c000.snappy.parquet.crc  .part-00000-d99c34bb-24a3-4945-8249-fd9eb332a366-c000.snappy.parquet.crc  part-00000-93de9fde-314e-461c-8b8d-3f427212a03a-c000.snappy.parquet  part-00000-d99c34bb-24a3-4945-8249-fd9eb332a366-c000.snappy.parquet
src/: main.py
src/config/: settings.py
src/io_utils/: data_handler.py
src/pipeline/: pipeline.py
src/processing/: transformations.py
src/session/: spark_session.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_data_handler.py  test_settings.py  test_spark_session.py  test_transformations.py
