# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trabalho-dataeng_pyspark_data_pipeline"
version = "0.1.0"
authors = [
  { name="wellington", email="waf.contato@gmail.com" },
]
description = "Trabalho final, Um pipeline de dados com PySpark estruturado com boas práticas de engenharia de software."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyspark==4.1.1",
    "pyyaml==6.0.3"
]

[project.optional-dependencies]
dev = [
    "ruff==0.12.9",
    "black==25.1.0",
    "build==1.3.0"
]

[project.scripts]
run-data-pipeline = "main:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}


# pyproject.toml (adicione ao final)
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "unit: Testes unitários isolados (sem I/O externo)",
    "integration: Testes de integração (orquestração entre componentes)",
]
addopts = "-v"